# fastMRI

./: .gitignore  agate.tikz  cbam_block.tikz  evaluate_models.py  exploration.ipynb  fastMRI_tutorial.ipynb  fastmri_dirs.yaml  model.ipynb  models_eval.ipynb  optimized-experiments.py  plot_tb_logs.py  plots_images.ipynb  presentation.tex  pyproject.toml  report.tex  requirements.txt  roi.tikz  unet_agate.tikz  unet_baseline.tikz  unet_cbam.tikz  unet_full.tikz  visualize_checkpoints.py
data/: annotated_files.py
evaluation_comparison_results/: evaluation_metrics.csv
experiment_results/: experiment_log.txt
health-project-web-app/: Procfile  requirements.txt
health-project-web-app/src/: app.py  constants.py  layout.py  model_utils.py
src/: data_module.py  mri_data.py  mri_module.py  subsample.py  transforms.py
src/unet/: train_unet_demo.py  unet.py  unet_module.py
