[project]
name = "fastmri-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "fastmri>=0.3.0",
    "h2o-wave==1.1.0",
    "h5py>=2.10",
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "jupyter>=1.1.1",
    "line-profiler>=4.2.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=1.18.5",
    "pandas>=1.3.4",
    "pytest>=8.3.5",
    "pytorch-lightning<=1.9",
    "pyyaml>=5.3.1",
    "requests>=2.32.3",
    "runstats>=1.8",
    "scikit-image>=0.16.2",
    "standard-imghdr>=3.13.0",
    "tensorboard>=2.19.0",
    "tensorboard-plugin-profile>=2.19.0",
    "toml>=0.10.2",
    "torch>=1.8",
    "torch-tb-profiler>=0.4.3",
    "torchmetrics>=0.5.1",
    "torchvision>=0.8.1",
    "tqdm>=4.67.1",
    "typing-extensions>=4.12.2",
]

